# biff

./: .gitignore  .rtd-environment.yml  .travis.yml  CHANGES.md  LICENSE  README.md  pip-requirements.txt  setup.cfg  setup.py
biff/: __init__.py  bfe.pyx  computecoeff.pyx  core.py  setup_package.py
biff/data/: Snlm-mathematica.csv
biff/scf/: __init__.py  bfe.pyx  bfe_class.pyx  computecoeff.pyx  core.py  setup_package.py
biff/scf/src/: bfe.c  bfe.h  coeff_helper.c
biff/scf/tests/: test_accp_fortran.py  test_against_fortran.py  test_bfe.py  test_class.py  test_computecoeff.py  test_computecoeff_discrete.py  test_computecoeff_fortran.py
biff/src/: bfe.c  bfe.h  bfe_helper.c  bfe_helper.h  coeff_helper.c  coeff_helper.h
biff/tests/: coveragerc  test_against_fortran.py  test_bfe.py  test_class.py  test_computecoeff.py  test_computecoeff_discrete.py
docs/: conf.py  index.rst  install.rst  scf.rst
docs/scf/: examples.rst  index.rst
examples/: parallel_compute_Anlm.py
notebooks/: Example - flattened Hernquist density.ipynb  Isochrone test.ipynb  Plummer test.ipynb
test-data-helper/: Makefile  README.md  bfe.f
test-data-helper/compute-accp/: Makefile  README.md  bfe.f  bfe.h
test-data-helper/compute-coeff/: Makefile  README.md  computecoeff.f  computecoeff.h
test-data/fortran/: Makefile  bfe.f  bfe.h  simple-hernquist.coeff  wang-zhao.coeff
