[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
# For the warnings filter, see: https://github.com/astropy/astropy/issues/6025
filterwarnings =
    ignore::ImportWarning

[ah_bootstrap]
auto_use = True

[metadata]
package_name = biff
description = Basis function expansions of gravitational potentials
long_description =
author = Adrian M. Price-Whelan
author_email = adrn@astro.princeton.edu
license = MIT
url = http://biff.adrian.pw/
edit_on_github = False
github_project = adrn/biff

[entry_points]
